# csdap-bulk-download

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  download.py  download_v14.py  download_v2.py  download_v3.py  pyproject.toml  requirements-dev.txt  requirements.txt  requirements2.txt  setup.cfg  setup.py  tox.ini
.docs/: example.cast
.github/workflows/: ci.yaml  lint.yaml  versioning.yaml
csdap_bulk_download/: __init__.py  cli.py  csdap.py  download.py  exceptions.py  logger.py
docs/: client.ipynb  download.ipynb
src/csda_client/: __init__.py  exceptions.py
src/csdap_bulk_download/: cli.py  client.py  csdap.py  logger.py
tests/: test_client.py
