[project]
name = "csdap-bulk-download"
version = "1.0.1"
description = "Bulk download tool for CSDA orders"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["requests>=2.32.3"]

[project.urls]
repository = "https://github.com/NASA-IMPACT/csdap-bulk-download"

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "nbstripout>=0.8.1",
    "pre-commit>=4.2.0",
    "pytest>=8.3.5",
    "ruff>=0.11.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
