[project]
name = "csdap-bulk-download"
version = "1.0.1"
description = "Bulk download tool for CSDA orders"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["requests>=2.32.3"]

[project.urls]
repository = "https://github.com/NASA-IMPACT/csdap-bulk-download"

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "mypy>=1.15.0",
    "pre-commit>=4.2.0",
    "pytest>=8.3.5",
    "ruff>=0.11.9",
    "types-requests>=2.32.0.20250515",
]

[tool.mypy]
files = "src/**/*.py,tests/**/*.py"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
