[project]
name = "csdap-bulk-download"
version = "1.0.1"
description = "Bulk download tool for CSDA orders"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["requests>=2.32.3"]

[project.urls]
repository = "https://github.com/NASA-IMPACT/csdap-bulk-download"

[dependency-groups]
dev = [
    "contextily>=1.6.2",
    "geopandas>=1.0.1",
    "ipykernel>=6.29.5",
    "mypy>=1.15.0",
    "pystac-client>=0.8.6",
    "pytest>=8.3.5",
    "ruff>=0.11.9",
    "humanize>=4.12.3",
    "tabulate>=0.9.0",
    "types-requests>=2.32.0.20250515",
    "tqdm>=4.67.1",
]

[tool.mypy]
files = "src/**/*.py,tests/**/*.py"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
